build_err.txt
    Checking rust_upscaler v0.1.0 (D:\ASUNA\Tools\Visual_studio\rust_upscaler)
error[E0599]: no method named `get_v` found for struct `VarBuilderArgs<'a, B>` in the current scope
   --> src\main.rs:372:32
    |
372 |             let qkv_shape = vb.get_v((), &format!("layers.{}.residual_group.blocks.0.attn.qkv.weight", i))?.dims().to_vec();
    |                                ^^^^^
    |
help: there is a method `get` with a similar name
    |
372 -             let qkv_shape = vb.get_v((), &format!("layers.{}.residual_group.blocks.0.attn.qkv.weight", i))?.dims().to_vec();
372 +             let qkv_shape = vb.get((), &format!("layers.{}.residual_group.blocks.0.attn.qkv.weight", i))?.dims().to_vec();
    |

For more information about this error, try `rustc --explain E0599`.
error: could not compile `rust_upscaler` (bin "rust_upscaler") due to 1 previous error
